pkg/provider/kubernetes/ingress/fixtures/Ingress-one-rule-with-two-paths_ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: testing

spec:
  rules:
  - http:
      paths:
      - path: /bar
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix
      - path: /foo
        backend:
          service:
            name: service1
            port:
              number: 80
        pathType: Prefix
